--- a/clase_8_20221103/assets/css/style.css
+++ b/clase_8_20221103/assets/css/style.css
@@ -39,6 +39,7 @@ label {
     width: 300px;
     height: 300px;
 }
+
 .tamano-medio {
     width: 500px;
     height: 500px;
@@ -64,7 +65,7 @@ con un selector de id */
 .btn {
     display: block;
     /* Afectar los 4 lados */
-     /* margin: 1.5rem; */
+    /* margin: 1.5rem; */
 
     /* margin-top: 1.5rem;
     margin-bottom: 1.5rem;
@@ -99,7 +100,7 @@ con un selector de id */
     max-width: 300px;
 }
 
-.grupo-input > input {
+.grupo-input>input {
     outline: none;
     font-size: 1.2rem;
     padding: 0.5rem;
@@ -109,6 +110,25 @@ con un selector de id */
 }
 
 
-.grupo-input > input:focus {
-  border-color: #816CC6;
+.grupo-input>input:focus {
+    border-color: #816CC6;
+}
+
+@media only screen and (max-width: 600px) {
+
+    h1 {
+        font-size: 0.8em;
+        margin: 0.5rem 0;
+        text-align: center;
+    }
+
+    .subtitulo {
+        font-size: 0.7rem;
+        margin: 0;
+        text-align: center;
+    }
+
+    #mi-formulario {
+        margin: 2rem auto;
+    }
 }
